# flight-price-agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
app/: config.py  database.py  main.py  models.py  schemas.py  seed.py
app/api/: dependencies.py
app/api/routes/: alerts.py  predictions.py  search.py
app/cache/: redis_client.py
app/db/: database.py  models.py
app/ml/: anomaly_detector.py  feature_engineering.py  price_predictor.py
app/routes/: airports.py  alerts.py  bookings.py  flights.py  payments.py  predictions.py
app/schemas/: __init__.py  alert.py  flight.py  prediction.py
app/services/: __init__.py  aggregator.py  alert_service.py  amadeus_service.py  data_generator.py  duffel_service.py  flight_search.py  kiwi_service.py  metasearch.py  prediction_engine.py  price_engine.py  skyscanner_client.py  travelpayouts_client.py
frontend/: index.html
frontend/css/: styles.css
frontend/js/: api.js  app.js
scripts/: compare_prices.py  compare_with_skyscanner.py  seed_historical_data.py  test_amadeus_prices.py  test_kiwi_prices.py  train_model.py
tests/: conftest.py  test_aggregator.py  test_airports.py  test_alerts.py  test_bookings.py  test_flights.py  test_predictions.py  test_search.py
